--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -122,7 +122,7 @@
       <section class="content-section">
 
         <header class="section-header">
-          <h2>Attributes</h2>
+          <h2>Localization</h2>
         </header>
         {% for skill in site.data.skills %}
         <div class="resume-item">
