--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -73,7 +73,7 @@
       <!-- begin Education -->
       <section class="content-section">
         <header class="section-header">
-          <h2>Education</h2>
+          <h2>Personal Milestones</h2>
         </header>
 
         {% for education in site.data.education %}
@@ -140,7 +140,7 @@
       <section class="content-section">
 
         <header class="section-header">
-          <h2>Recognitions</h2>
+          <h2>Things I'm Proud Of</h2>
         </header>
 
         {% for recognition in site.data.recognitions %}
@@ -160,7 +160,7 @@
       <section class="content-section">
 
         <header class="section-header">
-          <h2>Associations</h2>
+          <h2>Clubs</h2>
         </header>
 
         {% for association in site.data.associations %}
