--- a/_sass/_resume.scss
+++ b/_sass/_resume.scss
@@ -59,7 +59,7 @@
       font-size: 1.75rem;
       line-height: 2rem;
       letter-spacing: -.05rem;
-      text-align: center;
+      text-align: left;
       margin: 0 0 .5rem;
 
       @include media_larger_than_mobile {
